--- a/06_neural_networks.ipynb
+++ b/06_neural_networks.ipynb
@@ -82,8 +82,7 @@
     "\n",
     "Za pomocą [`transformacji`](https://pytorch.org/vision/stable/transforms.html) podawanych do klasy MNIST należy:\n",
     "1. Zamienić obiekty `PIL` w Tensory.  \n",
-    "2. Policzyć średnią i odchylenie standardowe pikseli dla całego zbioru trenującego i użyć ich do znormalizowania danych trenujących. Do liczenia średniej i odchylenia standardowego wykorzystać funkcję  `calculate_mean_and_std`.  \n",
-    "    **HINT**: Tutaj torchvision też powinien nam to ułatwić.  \n",
+    "2. Policzyć średnią i odchylenie standardowe pikseli dla całego zbioru trenującego i użyć ich do znormalizowania danych trenujących. Do liczenia średniej i odchylenia standardowego wykorzystać funkcję  `calculate_mean_and_std` (proszę zwrócić uwagę na to w jakim przedziale znajdują się dane – chcemy aby były w przedziale 0-1). **HINT**: Tutaj torchvision też powinien nam to ułatwić. \n",
     "3. Zmienić \"kształt\" każdego przykładu z `28x28` na `784`.  \n",
     "    **HINT**: [`Lambda`](https://pytorch.org/docs/stable/torchvision/transforms.html#torchvision.transforms.Lambda)\n",
     "\n",
@@ -94,29 +93,103 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.1%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/raw/train-images-idx3-ubyte.gz to ./MNIST/raw\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "113.5%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/raw/train-labels-idx1-ubyte.gz to ./MNIST/raw\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.4%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/raw/t10k-images-idx3-ubyte.gz to ./MNIST/raw\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "180.4%/home/rahid/Apps/miniconda3/envs/ml/lib/python3.7/site-packages/torchvision/datasets/mnist.py:469: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /opt/conda/conda-bld/pytorch_1595629401553/work/torch/csrc/utils/tensor_numpy.cpp:141.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/raw/t10k-labels-idx1-ubyte.gz to ./MNIST/raw\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
     "from torchvision.datasets import MNIST\n",
-    "from torchvision.transforms import ???\n",
+    "from torchvision.transforms import ToTensor, Normalize, Compose, Lambda # ???\n",
     "\n",
     "def calculate_mean_and_std() -> Tuple[float, float]:\n",
-    "    ???\n",
+    "    train_data = MNIST(root='.', download=True, train=True, transform=ToTensor())\n",
+    "    mean = (train_data.data.type(torch.float32) / 255).mean().item()\n",
+    "    std = (train_data.data.type(torch.float32) / 255).std().item()\n",
     "    return mean, std\n",
+    "\n",
     "mean, std = calculate_mean_and_std()\n",
     "\n",
-    "train_data = MNIST(\n",
-    "    root='.',\n",
-    "    download=True,\n",
-    "    train=True, \n",
-    "    ???\n",
-    ")\n",
+    "train_data = MNIST(root='.', \n",
+    "                   download=True, \n",
+    "                   train=True, \n",
+    "                   transform=Compose([ToTensor(), \n",
+    "                                      Normalize((mean,), (std,)),\n",
+    "                                      Lambda(lambda x: x.view(-1))]))\n",
     "\n",
-    "test_data = MNIST(\n",
-    "    root='.', \n",
-    "    download=True, \n",
-    "    train=False, \n",
-    "    ???\n",
-    ")\n"
+    "test_data = MNIST(root='.', \n",
+    "                  download=True, \n",
+    "                  train=False, \n",
+    "                  transform=Compose([ToTensor(), \n",
+    "                                     Normalize((mean,), (std,)),\n",
+    "                                     Lambda(lambda x: x.view(-1))]))\n"
    ]
   },
   {
@@ -234,7 +307,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian.\n",
+    "\n",
+    "Tak ,ten dataset można rozwiązać zadaniami płytkimi, ponieważ...\n",
+    "Nie, tego datasetu nie można rozwiązać zadania płytkimi, ponieważ... "
    ]
   },
   {
@@ -322,7 +398,8 @@
     "        \"\"\"\n",
     "        Forward pass through the network\n",
     "        \"\"\"\n",
-    "\n",
+    "        h1 = torch.tanh(x @ self.weight_1 + self.bias_1)\n",
+    "        \n",
     "        ???\n",
     "        \n",
     "    def parameters(self) -> List[torch.Tensor]:\n",
@@ -354,7 +431,7 @@
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size)\n",
     "\n",
     "# initialize the model\n",
-    "model: CustomNetwork = ???\n",
+    "model: CustomNetwork = CustomNetwork(???)\n",
     "\n",
     "# initialize the optimizer using the hyperparams below\n",
     "lr: float = 0.01\n",
@@ -387,9 +464,9 @@
     "        correct: int = 0 \n",
     "        for i, (x, y) in enumerate(test_loader):\n",
     "            # pass through the network\n",
-    "            output: torch.Tensor = ???\n",
+    "            output: torch.Tensor = model(x) # ???\n",
     "            # update the number of correctly predicted examples\n",
-    "            correct += ???\n",
+    "            correct += (output.argmax(1) == y).float().sum().item() # ??\n",
     "\n",
     "        print(f\"\\nTest accuracy: {correct / len(test_data)}\")\n",
     "\n",
@@ -408,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -422,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
