--- a/06_neural_networks.ipynb
+++ b/06_neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,36 +92,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to .\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9913344it [00:01, 7827709.28it/s]                             \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting .\\MNIST\\raw\\train-images-idx3-ubyte.gz to .\\MNIST\\raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to .\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "29696it [00:00, 29403694.90it/s]         "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting .\\MNIST\\raw\\train-labels-idx1-ubyte.gz to .\\MNIST\\raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to .\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1649664it [00:00, 6162422.22it/s]                            \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting .\\MNIST\\raw\\t10k-images-idx3-ubyte.gz to .\\MNIST\\raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to .\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "5120it [00:00, ?it/s]                   \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting .\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz to .\\MNIST\\raw\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
     "from torchvision.datasets import MNIST\n",
-    "from torchvision.transforms import ???\n",
+    "from torchvision.transforms import ToTensor, Normalize, Compose, Lambda # ???\n",
     "\n",
     "def calculate_mean_and_std() -> Tuple[float, float]:\n",
-    "    ???\n",
+    "    train_data = MNIST(root='.', download=True, train=True, transform=ToTensor())\n",
+    "    mean = (train_data.data.type(torch.float32) / 255).mean().item()\n",
+    "    std = (train_data.data.type(torch.float32) / 255).std().item()\n",
     "    return mean, std\n",
+    "\n",
     "mean, std = calculate_mean_and_std()\n",
     "\n",
-    "train_data = MNIST(\n",
-    "    root='.',\n",
-    "    download=True,\n",
-    "    train=True, \n",
-    "    ???\n",
-    ")\n",
+    "train_data = MNIST(root='.', \n",
+    "                   download=True, \n",
+    "                   train=True, \n",
+    "                   transform=Compose([ToTensor(), \n",
+    "                                      Normalize((mean,), (std,)),\n",
+    "                                      Lambda(lambda x: x.view(-1))]))\n",
     "\n",
-    "test_data = MNIST(\n",
-    "    root='.', \n",
-    "    download=True, \n",
-    "    train=False, \n",
-    "    ???\n",
-    ")\n"
+    "test_data = MNIST(root='.', \n",
+    "                  download=True, \n",
+    "                  train=False, \n",
+    "                  transform=Compose([ToTensor(), \n",
+    "                                     Normalize((mean,), (std,)),\n",
+    "                                     Lambda(lambda x: x.view(-1))]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,11 +322,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Gaussian.\n",
+    "\"Tak, ten dataset można rozwiązać metodami płytkimi. Dowodem są próby dla sieci: 8-5-7 oraz dla sieci o jednym neuronie.\"\n",
+    "\"Przy tych samych parametrach wyjściowych otrzymano bardzo dobre dopasowania. W obu też przypadkach otrzymano odpowiedni model już po około 20 krokach pętli uczenia się.\"\n",
+    "\"Dataset ten jest łatwiejszy ponieważ oba te zbiory danych łatwo rozdzielić jedną prostą.\"\n",
+    "pass"
    ]
   },
   {
@@ -249,11 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle.\n",
+    "\"Potrzeba co najmniej dwa feature'y: X12 oraz X22. Przy jednym neuronie uzyskujemy koszt =< 0.001 już po około 120 krokach.\"\n",
+    "\"Chcąc uzyskać podobny wynik ale dla feature'ów X1 oraz X2 potrzebna jest architektura sieci 3-1 i już po około 300 krokach otrzymujemy koszt =< 0.001\"\n",
+    "\"Dowolnie duża sieć stosująca liniową funkcję aktywacji nie jest w stanie odpowiednio dopasować modelu do zbioru Circle.\"\n",
+    "\"Powodem może być próba oddzielenia zbiorów prostą linią co jest oczywiście niemożliwe w przypadku tego datasetu.\"\n",
+    "pass"
    ]
   },
   {
@@ -267,11 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral.\n",
+    "\"Zaproponowano sieć o architekturze 7-4-2. Dla lr=0.03, fAktywacji == Tanh, Regularyzacji L2 o RegRate = 0.003 osiągnięto wartości funkcji kosztu 0.008 na zbiorze treningowym oraz 0.034 na zbiorze testowym.\"\n",
+    "\"Wydaje się, że to rozwiązanie nie generalizuje poprawnie. Mamy tu do czynienia z overfidingiem poniewaz model dopasował się do danych. Jeśli rozszerzyć dane o kolejne punkty kontynuujące spirale - uzyskany model nie będzie odpowiednio generalizować więc de facto będzie bezużyteczny.\"\n",
+    "pass"
    ]
   },
   {
@@ -354,7 +458,7 @@
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size)\n",
     "\n",
     "# initialize the model\n",
-    "model: CustomNetwork = ???\n",
+    "model: CustomNetwork = CustomNetwork(???)\n",
     "\n",
     "# initialize the optimizer using the hyperparams below\n",
     "lr: float = 0.01\n",
@@ -387,9 +491,9 @@
     "        correct: int = 0 \n",
     "        for i, (x, y) in enumerate(test_loader):\n",
     "            # pass through the network\n",
-    "            output: torch.Tensor = ???\n",
+    "            output: torch.Tensor = model(x) # ???\n",
     "            # update the number of correctly predicted examples\n",
-    "            correct += ???\n",
+    "            correct += (output.argmax(1) == y).float().sum().item() # ??\n",
     "\n",
     "        print(f\"\\nTest accuracy: {correct / len(test_data)}\")\n",
     "\n",
@@ -422,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
