--- a/06_neural_networks.ipynb
+++ b/06_neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,97 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to .\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9913344it [00:01, 7827709.28it/s]                             \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting .\\MNIST\\raw\\train-images-idx3-ubyte.gz to .\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to .\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "29696it [00:00, 29403694.90it/s]         "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting .\\MNIST\\raw\\train-labels-idx1-ubyte.gz to .\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to .\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1649664it [00:00, 6162422.22it/s]                            \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting .\\MNIST\\raw\\t10k-images-idx3-ubyte.gz to .\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to .\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5120it [00:00, ?it/s]                   \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting .\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz to .\\MNIST\\raw\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision.datasets import MNIST\n",
@@ -213,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +313,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241],\n",
+       "        [-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241],\n",
+       "        [-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241],\n",
+       "        ...,\n",
+       "        [-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241],\n",
+       "        [-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241],\n",
+       "        [-0.4241, -0.4241, -0.4241,  ..., -0.4241, -0.4241, -0.4241]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size: int = 64\n",
+    "epoch: int = 3\n",
+    "\n",
+    "\n",
+    "# prepare data loaders, based on the already loaded datasets\n",
+    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size)\n",
+    "lst = [(x,y) for i, (x,y) in enumerate(train_loader)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = lst[0][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (784) must match the size of tensor b (64) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6808/5408913.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mh1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mweight_1\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mh1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mh1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbias_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;31m#h1 = torch.tanh(h1)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (784) must match the size of tensor b (64) at non-singleton dimension 0"
+     ]
+    }
+   ],
+   "source": [
+    "input_dim = 20 ???\n",
+    "hidden_dim = 64 ???\n",
+    "output_dim = 10 \n",
+    "\n",
+    "weight_1: torch.Tensor = torch.randn(hidden_dim, requires_grad=True) \n",
+    "bias_1: torch.Tensor = torch.Tensor([0 for i in range(hidden_dim)]) #???\n",
+    "\n",
+    "weight_2: torch.Tensor = torch.randn(output_dim, requires_grad=True)\n",
+    "bias_2: torch.Tensor = torch.Tensor([0 for i in range(output_dim)])\n",
+    "\n",
+    "type(bias_2)\n",
+    "\n",
+    "h1 = weight_1 @ x\n",
+    "h1 = h1 + bias_1 #???\n",
+    "#h1 = torch.tanh(h1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,29 +399,30 @@
     "    \"\"\"\n",
     "    Simple 1-hidden layer linear neural network\n",
     "    \"\"\"\n",
-    "    def __init__(self, input_dim, hidden_dim, output_dim):\n",
+    "    def __init__(self, input_dim : int, hidden_dim : int, output_dim : int):\n",
     "        \"\"\"\n",
     "        Initialize network's weights \n",
     "        \"\"\"\n",
-    "        \n",
-    "        self.weight_1: torch.Tensor = ???\n",
+    "\n",
+    "        self.weight_1: torch.Tensor = torch.randn(input_dim, requires_grad=True) \n",
     "        self.bias_1: torch.Tensor = ???\n",
     "        \n",
-    "        self.weight_2: torch.Tensor = ???\n",
+    "        self.weight_2: torch.Tensor = torch.randn(hidden_dim, requires_grad=True)\n",
     "        self.bias_2: torch.Tensor = ???\n",
     "        \n",
     "    def __call__(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        \"\"\"\n",
     "        Forward pass through the network\n",
     "        \"\"\"\n",
-    "\n",
-    "        ???\n",
+    "        h1 = torch.tanh(x @ self.weight_1 + self.bias_1)\n",
+    "        h2 = torch.linalg(x @ self.weight_2 + self.bias_2)\n",
+    "        return \n",
     "        \n",
     "    def parameters(self) -> List[torch.Tensor]:\n",
     "        \"\"\"\n",
     "        Returns all trainable parameters \n",
     "        \"\"\"\n",
-    "        return [self.weight_1, self.bias_1, self.weight_2, self.bias_2]"
+    "        return [self.weight_1, self.bias_1, self.weight_2, self.bias_2]\n"
    ]
   },
   {
@@ -458,12 +447,12 @@
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size)\n",
     "\n",
     "# initialize the model\n",
-    "model: CustomNetwork = CustomNetwork(???)\n",
+    "model: CustomNetwork = CustomNetwork(???, ???, 10)\n",
     "\n",
     "# initialize the optimizer using the hyperparams below\n",
     "lr: float = 0.01\n",
     "momentum: float = 0.9\n",
-    "optimizer: torch.optim.Optimizer = SGD(???)\n",
+    "optimizer: torch.optim.Optimizer = SGD(model.parameters(), lr=learning_rate)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -473,9 +462,9 @@
     "        # reset the gradients from previouis iteration\n",
     "        optimizer.zero_grad()\n",
     "        # pass through the network\n",
-    "        output: torch.Tensor = ???\n",
+    "        output: torch.Tensor = model.__call__(x)\n",
     "        # calculate loss\n",
-    "        loss: torch.Tensor = criterion(???)\n",
+    "        loss: torch.Tensor = criterion(output,y)\n",
     "        # backward pass thorught the network\n",
     "        loss.backward()\n",
     "        # apply the gradients\n",
@@ -495,9 +484,8 @@
     "            # update the number of correctly predicted examples\n",
     "            correct += (output.argmax(1) == y).float().sum().item() # ??\n",
     "\n",
-    "        print(f\"\\nTest accuracy: {correct / len(test_data)}\")\n",
+    "        print(f\"\\nTest accuracy: {correct / len(test_data)}\")        \n",
     "\n",
-    "        \n",
     "# this is your test\n",
     "assert correct / len(test_data) > 0.82, \"Subject to random seed you should be able to get >82% accuracy\""
    ]
