--- a/08_regularyzacja_ps.ipynb
+++ b/08_regularyzacja_ps.ipynb
@@ -359,16 +359,14 @@
     "        if not torch.is_grad_enabled():\n",
     "            X_hat = (X - moving_mean) / torch.sqrt(moving_var + self.eps)\n",
     "        else:\n",
-    "            mean = X.mean(dim=0)\n",
-    "            self.mu = mean\n",
+    "            self.mu = X.mean(dim=0)\n",
     "\n",
-    "            var = ((X - mean) ** 2).mean(dim=0)\n",
-    "            self.sigma = var\n",
+    "            self.sigma= ((X - self.mu) ** 2).mean(dim=0)\n",
     "    \n",
-    "            X_hat = (X - mean) / torch.sqrt(var + self.eps)\n",
+    "            X_hat = (X - self.mu) / torch.sqrt(self.sigma + self.eps)\n",
     "            \n",
-    "            moving_mean = self.momentum * moving_mean + (1.0 - self.momentum) * mean\n",
-    "            moving_var = self.momentum * moving_var + (1.0 - self.momentum) * var\n",
+    "            moving_mean = self.momentum * moving_mean + (1.0 - self.momentum) * self.mu\n",
+    "            moving_var = self.momentum * moving_var + (1.0 - self.momentum) * self.sigma\n",
     "\n",
     "        Y = gamma * X_hat + beta \n",
     "\n",
