--- a/11_RNN.ipynb
+++ b/11_RNN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "I0D3yk7lhAQu"
    },
@@ -115,11 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "maOHB6NZiRgr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'unzip' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://download.pytorch.org/tutorial/data.zip\n",
     "!unzip data.zip"
@@ -128,6 +139,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "id": "DRGjkPZ2hAQv"
    },
@@ -180,11 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "Yvstu1-sldC6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape: torch.Size([1, 2, 52])\n",
+      "name: Ta\n",
+      "y: vietnamese\n"
+     ]
+    }
+   ],
    "source": [
     "# check out the content of the dataset\n",
     "for i, (x, y) in enumerate(train_loader):\n",
@@ -216,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "WNu0vccJhAQw"
    },
@@ -240,9 +268,9 @@
     "\n",
     "        self.hidden_size = hidden_size\n",
     "\n",
-    "        self.input_to_hidden = ???\n",
-    "        \n",
-    "        self.hidden_to_output = ???\n",
+    "        self.input_to_hidden = 0\n",
+    "\n",
+    "        self.hidden_to_output = 0\n",
     "    \n",
     "    # for the sake of simplicity a single forward will process only a single timestamp \n",
     "    def forward(self, \n",
@@ -258,8 +286,8 @@
     "        \"\"\"\n",
     "        \n",
     "        combined = torch.cat([input, hidden], dim=1) \n",
-    "        hidden = ???\n",
-    "        output =  ???\n",
+    "        hidden = \n",
+    "        output =  \n",
     "        return output, hidden\n",
     "    \n",
     "    def init_hidden(self, batch_size: int) -> torch.Tensor:\n",
@@ -287,7 +315,9 @@
    },
    "outputs": [],
    "source": [
-    "n_class = len(label_to_idx)\n",
+    "n_class = len(label_to_idx) \n",
+    "# n_class = 18\n",
+    "# n_letters = 52\n",
     "\n",
     "# initialize network and optimizer\n",
     "rnn = RNN(n_letters, 256, n_class).cuda()\n",
@@ -693,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
