--- a/11_RNN.ipynb
+++ b/11_RNN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "I0D3yk7lhAQu"
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "Yvstu1-sldC6"
    },
@@ -207,9 +207,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.shape: torch.Size([1, 2, 52])\n",
-      "name: Ta\n",
-      "y: vietnamese\n"
+      "x.shape: torch.Size([1, 10, 52])\n",
+      "name: Koumanidis\n",
+      "y: greek\n"
      ]
     }
    ],
@@ -244,11 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "id": "WNu0vccJhAQw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_12296/2413689063.py, line 37)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\BNPC\\AppData\\Local\\Temp/ipykernel_12296/2413689063.py\"\u001b[1;36m, line \u001b[1;32m37\u001b[0m\n\u001b[1;33m    hidden =\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class RNN(torch.nn.Module):\n",
     "    \n",
@@ -268,9 +277,9 @@
     "\n",
     "        self.hidden_size = hidden_size\n",
     "\n",
-    "        self.input_to_hidden = 0\n",
+    "        self.input_to_hidden = 0 #???\n",
     "\n",
-    "        self.hidden_to_output = 0\n",
+    "        self.hidden_to_output = 0 #???\n",
     "    \n",
     "    # for the sake of simplicity a single forward will process only a single timestamp \n",
     "    def forward(self, \n",
@@ -286,8 +295,8 @@
     "        \"\"\"\n",
     "        \n",
     "        combined = torch.cat([input, hidden], dim=1) \n",
-    "        hidden = \n",
-    "        output =  \n",
+    "        hidden = combined #???\n",
+    "        output = \n",
     "        return output, hidden\n",
     "    \n",
     "    def init_hidden(self, batch_size: int) -> torch.Tensor:\n",
