--- a/11_RNN.ipynb
+++ b/11_RNN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "I0D3yk7lhAQu"
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "maOHB6NZiRgr"
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "DRGjkPZ2hAQv"
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "id": "Yvstu1-sldC6"
    },
@@ -207,9 +207,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.shape: torch.Size([1, 10, 52])\n",
-      "name: Koumanidis\n",
-      "y: greek\n"
+      "x.shape: torch.Size([1, 5, 52])\n",
+      "name: Quyen\n",
+      "y: vietnamese\n"
      ]
     }
    ],
@@ -244,21 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "id": "WNu0vccJhAQw"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_12296/2413689063.py, line 37)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\BNPC\\AppData\\Local\\Temp/ipykernel_12296/2413689063.py\"\u001b[1;36m, line \u001b[1;32m37\u001b[0m\n\u001b[1;33m    hidden =\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import torch.nn as nn\n",
+    "\n",
     "class RNN(torch.nn.Module):\n",
     "    \n",
     "    def __init__(self, \n",
@@ -277,9 +270,9 @@
     "\n",
     "        self.hidden_size = hidden_size\n",
     "\n",
-    "        self.input_to_hidden = 0 #???\n",
+    "        self.input_to_hidden = nn.Linear(input_size, hidden_size)\n",
     "\n",
-    "        self.hidden_to_output = 0 #???\n",
+    "        self.hidden_to_output = nn.Linear(hidden_size, output_size)\n",
     "    \n",
     "    # for the sake of simplicity a single forward will process only a single timestamp \n",
     "    def forward(self, \n",
@@ -295,8 +288,8 @@
     "        \"\"\"\n",
     "        \n",
     "        combined = torch.cat([input, hidden], dim=1) \n",
-    "        hidden = combined #???\n",
-    "        output = \n",
+    "        hidden = nn.ReLU(self.input_to_hidden(combined))\n",
+    "        output = nn.ReLU(self.hidden_to_output(combined))\n",
     "        return output, hidden\n",
     "    \n",
     "    def init_hidden(self, batch_size: int) -> torch.Tensor:\n",
@@ -304,6 +297,17 @@
     "        Returns initial value for the hidden state\n",
     "        \"\"\"\n",
     "        return torch.zeros(batch_size, self.hidden_size, requires_grad=True).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.zeros(5, requires_grad=True)\n",
+    "b = torch.zeros(256, requires_grad=True)\n",
+    "c = torch.zeros(5, requires_grad=True)"
    ]
   },
   {
@@ -317,16 +321,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "xXEsqqvxhAQx",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_15048/3630524323.py, line 32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\BNPC\\AppData\\Local\\Temp/ipykernel_15048/3630524323.py\"\u001b[1;36m, line \u001b[1;32m32\u001b[0m\n\u001b[1;33m    output = ???\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "n_class = len(label_to_idx) \n",
-    "# n_class = 18\n",
     "# n_letters = 52\n",
+    "# n_class = 18\n",
+    "n_class = len(label_to_idx) \n",
     "\n",
     "# initialize network and optimizer\n",
     "rnn = RNN(n_letters, 256, n_class).cuda()\n",
@@ -392,6 +405,13 @@
     "    print(f\"Final F1 score: {f1:.2f}\")\n",
     "    assert f1 > 0.15, \"You should get over 0.15 f1 score, try changing some hyperparams!\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
